--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -63,10 +63,10 @@
 
   #navbar.mobile-open .navbar-item {
     clear: both;
-    padding: 5px;
+    padding: 0 0 10px 0;
     text-align: center;
     position: relative;
-    bottom: 40px;
+    bottom: 20px;
   }
 
 }
